--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.0",
     "bip39": "^3.1.0",
+    "ed25519-hd-key": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.0",
+    "tweetnacl": "^1.0.3",
     "vite-plugin-node-polyfills": "^0.22.0"
   },
   "devDependencies": {
